--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==1.21.0
-scikit-learn==1.3.0
-joblib==1.3.2
-scipy==1.10.1
-pandas==1.5.3
-plotly==5.14.1
-geopy==2.3.1
+streamlit
+scikit-learn
+joblib
+scipy
+pandas
+plotly
+geopy
